# bihelix-rgb-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
demo/: .gitignore  query_asset.sh  run_generate_address.sh
src/: main.rs  opts.rs  utils.rs
src/cmds/: key.rs  mod.rs  rgb.rs  runtime.rs
